[package]
name = "rust_sandbox"
version = "0.1.0"
authors = ["Bill Barnhill <w.a.barnhill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
log = "0.4.11"
env_logger = "0.8.1"
rusqlite = "0.24.1"